[gd_scene load_steps=6 format=2]

[ext_resource path="res://ColorMob.gd" type="Script" id=1]
[ext_resource path="res://enemy_asset/Green.png" type="Texture" id=2]
[ext_resource path="res://enemy_asset/Red.png" type="Texture" id=3]
[ext_resource path="res://enemy_asset/Blue.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Green",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Red",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Blue",
"speed": 5.0
} ]

[node name="ColorMob" type="RigidBody2D"]
collision_layer = 2
collision_mask = 3
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionRed" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -30.6567, -23.0037, -31.2088, -26.1322, 19.2143, -26.1322, 25.8393, -24.66, 35.0406, -18.2191, 41.6655, -8.28165, 43.5058, 0.183544, 41.1135, 9.93693, 33.0163, 20.9785, 23.631, 25.7632, 17.1901, 26.4993, -31.2088, 26.6833, -31.0248, 23.9229, -26.0561, 21.5306, -18.695, 14.3535, -15.7506, 4.96822, -15.9346, -4.60114, -19.9832, -14.9066, -27.1602, -21.7156 )
disabled = true

[node name="CollisionBlue" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PoolVector2Array( -41.6983, -25.7641, -17.2228, -25.7641, 45.162, 0.183544, -16.8548, 27.4194, -41.6983, 27.0514, -18.1429, 0.183544 )
disabled = true

[node name="CollisionGreen" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -40.7782, -26.5002, 18.2942, -26.3162, 44.4259, -0.000480652, 16.822, 27.0514, -41.3302, 26.3153, -17.5909, -0.368534 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.184029, 0.184029 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "Red"

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
